# hermetic

./: .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  README.md  SECURITY.md  SIGNING_KEY.pub  deny.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/hermetic-core/: Cargo.toml
crates/hermetic-core/src/: audit.rs  crypto.rs  db.rs  error.rs  kdf.rs  lib.rs  rate_limit.rs  secret.rs  session.rs  ui.rs  vault.rs  vault_meta.rs
crates/hermetic-core/tests/: audit_hardening_tests.rs  audit_tests.rs  cli_add_tests.rs  cli_secret_mgmt_tests.rs  integration_day4.rs  integration_day5.rs  integration_day6.rs  rate_limit_hardening_tests.rs  rate_limit_tests.rs  secret_type_tests.rs  vault_unit_tests.rs
crates/hermetic-sdk/: Cargo.toml
crates/hermetic-sdk/src/: client.rs  handle.rs  lib.rs  protocol.rs  types.rs  wire.rs
crates/hermetic-transport/: Cargo.toml
crates/hermetic-transport/src/: auth.rs  error.rs  executor.rs  lib.rs  refresh.rs  ssrf.rs
docs/: cli-reference.md  getting-started.md  license-faq.md  mcp-integration.md  python-sdk.md  security-overview.md
docs/amendments/: HC-14.md
docs/legal/: CCLA.md  ICLA.md
examples/: README.md  cli-workflow.sh  mcp-quickstart.md  sdk-quickstart.py
scripts/: community-baseline.sh  community-sentinel-check.sh  install.sh
