[package]
name = "hermetic-sdk"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Hermetic Python SDK — zero-knowledge credential broker for AI agents"
homepage = "https://hermeticsys.com"
repository = "https://github.com/hermetic-sys/Hermetic-Vault"
keywords = ["security", "credentials", "ai-agents", "zero-knowledge"]
categories = ["cryptography", "authentication"]
publish = false

[lib]
name = "hermetic"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
hermetic-transport = { path = "../hermetic-transport" }
tokio = { version = "1", features = ["rt"] }
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
url = "2"
ring = "0.17.14"

[features]
default = []
test-helpers = []
